kubernetes/apps/flux-system/webhooks/app/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  annotations:
    external-dns.home.arpa/enabled: "true"
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
spec:
  ingressClassName: internal
  rules:
    - host: &host "flux-webhook.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
